added rendered figs, readme

--- a/max_rank_exp.ipynb
+++ b/max_rank_exp.ipynb
@@ -1533,8 +1533,18 @@
    "source": [
     "Our experimental setup here relies on our bounding box experiments performed for [Adaptive Bounding Box Uncertainties via Two-Step Conformal Prediction](https://arxiv.org/abs/2403.07263), and uses the associated public codebase [conformal-od](https://github.com/alextimans/conformal-od). Please follow the experiment setup guidelines outlined there to get the code up and running. The experiment is done using absolute residual conformal scores (```std_conf```) without label set generation on the BDD100k dataset.\n",
     "\n",
-    "Specifically, we point to the updated code file [conformal-od/calibration/pred_intervals.py](https://github.com/alextimans/conformal-od/blob/main/calibration/pred_intervals.py) whose ```compute_quantile()``` method now includes copula multiple testing corrections. The argument can be appropriately set in the config files. Note that some names are slightly different -- the correct pairings of method and argument name are [(Bonferroni, ```bonferroni```), (Bonferroni-Sidak, ```bonferroni_sidak```), (Gumbel Copula, ```gumbel_copula```), (Emp. Copula, ```emp_copula```), (Max-T, ```score_global```), (Max-Rank, ```rank_global```)]."
+    "Specifically, we point to the updated code file [conformal-od/calibration/pred_intervals.py](https://github.com/alextimans/conformal-od/blob/main/calibration/pred_intervals.py) whose ```compute_quantile()``` method now includes copula multiple testing corrections. The argument can be appropriately set in the config files. Note that some names are slightly different -- the correct pairings of method and argument name are [(Bonferroni, ```bonferroni```), (Bonferroni-Sidak, ```bonferroni_sidak```), (Gumbel Copula, ```gumbel_copula```), (Emp. Copula, ```emp_copula```), (Max-T, ```score_global```), (Max-Rank, ```rank_global```)].\n",
+    "\n",
+    "We provide the obtained results table from running the experiment in ```data/bdd100k_train_res_table.csv```. Then, we can generate the figure as follows."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a12800b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
